[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-call-batcher"
version = "0.1.0"
description = "Accumulate individual LLM requests into batches, flush on size or timeout"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["llm", "batch", "async", "requests", "coalesce"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/llm-call-batcher"
Repository = "https://github.com/MukundaKatta/llm-call-batcher"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_call_batcher = ["py.typed"]
